--- a/package.json
+++ b/package.json
@@ -22,7 +22,11 @@
     "@angular/router": "^18.2.0",
     "@angular/ssr": "^18.2.21",
     "express": "^4.18.2",
+    "jquery": "^4.0.0",
+    "jwt-decode": "^4.0.0",
     "rxjs": "~7.8.0",
+    "select2": "^4.1.0-rc.0",
+    "sweetalert2": "^11.26.18",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.10"
   },
